force-app/main/default/objects/FAQ_Item__mdt/FAQ_Item__mdt.object-meta.xml
<CustomObject>
    <label>FAQ Item</label>
    <pluralLabel>FAQ Items</pluralLabel>
</CustomObject>