force-app/main/default/objects/FAQ_Item__mdt/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>