force-app/main/default/objects/FAQ_Item__mdt/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <label>Ranking</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>